Started work on Repertoire page

--- a/Bombay Groove/contact.html
+++ b/Bombay Groove/contact.html
@@ -44,7 +44,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
@@ -65,12 +65,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"
+              <a class="nav-link active" href="contact.html"
                 >Contact<span class="sr-only">(contact)</span></a
               >
             </li>
           </ul>
-          <span class="navbar-text"><a href="mailto:info@bombaygroove.com">
+          <span class="navbar-text"><a href="mailto:info@bombaygroove.com" style="text-decoration:none">
             Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
@@ -97,7 +97,8 @@
                         <a>
                             <i class="fa fa-phone fa-lg" style="color:rgba(255, 79, 79, 0.75)"></i>
                         </a>   
-                     <p>(+44) 0780 313 8891</p>
+                            <p>
+                        <a href="+447803138891" style="text-decoration:none">(+44) 0780 313 8891</a></p>
                 </div>
             </div>
         </div>   
