--- a/Bombay Groove/index.html
+++ b/Bombay Groove/index.html
@@ -70,7 +70,7 @@
               >
             </li>
           </ul>
-          <span class="navbar-text"><a href="mailto:info@bombaygroove.com">
+          <span class="navbar-text"><a href="mailto:info@bombaygroove.com" style="text-decoration:none">
             Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
