--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -44,7 +44,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(home)</span></a
               >
@@ -60,7 +60,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="gallery.html"
+              <a class="nav-link active" href="gallery.html"
                 >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
@@ -70,7 +70,7 @@
               >
             </li>
           </ul>
-          <span class="navbar-text"><a href="mailto:info@bombaygroove.com">
+          <span class="navbar-text"><a href="mailto:info@bombaygroove.com" style="text-decoration:none">
             Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
