--- a/Bombay Groove/repertoire.html
+++ b/Bombay Groove/repertoire.html
@@ -44,7 +44,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
@@ -54,7 +54,7 @@
                 >Watch/Listen <span class="sr-only">(watch/listen)</span></a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="repertoire.html"
                 >Repertoire<span class="sr-only">(repertoire)</span></a
               >
@@ -70,13 +70,48 @@
               >
             </li>
           </ul>
-          <span class="navbar-text"><a href="mailto:info@bombaygroove.com">
+          <span class="navbar-text"><a href="mailto:info@bombaygroove.com" style="text-decoration:none">
             Info@BombayGroove.com</a>
             <span class="sr-only">(Info@BombayGroove.com)</span>
           </span>
         </div>
       </nav>
     </div>
+<!-------Content----->
+
+
+<article class="container-fluid overflow-hidden">
+<div class="contact-us-container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <h1 class="contact-header text-uppercase text-center">Repertoire</h1>
+                <p class="contact-paragraph text-center">Here are some of our most popular songs.
+                 Please click the headers to download the full lists. If you you would like us to
+                  perform a song that is not listed, please do get in touch with your request, as 
+                  it is often possible for us to source the sheet music.</p>
+            <div class="row justify-content-center">
+                <div class="quote col-12 col-lg-4 col-sm-6">
+                    <h3 class="song-list-header text-uppercase">Bollywood Songs</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                </div>
+                <div class="quote col-12 col-lg-4 col-sm-6">
+                    <h3 class="song-list-header text-uppercase">Pop/Rock</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                </div>
+                <div class="quote col-12 col-lg-4 col-sm-6">
+                <h3 class="song-list-header text-uppercase">Classical</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                </div>
+            </div>    
+        </div> 
+    </div>        
+</div>
 
  <!------Footer------>
 
@@ -118,7 +153,7 @@
           </div>
         </div>
       </footer>    
-
+</article>
       <!-----./Footer----->
 
     <script
