adding performing picture to gallery page

--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -100,6 +100,9 @@
     <img class="img-fluid" src="assets/images/with-mirror.JPG" alt="Bombay Groove standing near a mirror">
     </li>
     <li>
+    <img class="img-fluid" src="assets/images/stockbrook-(2).jpg" alt="Bombay Groove standing near a mirror">
+    </li>
+    <li>
     <img class="img-fluid" src="assets/images/mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
     </li>
     <li>
