more work on gallery and contact sections

--- a/Bombay Groove/contact.html
+++ b/Bombay Groove/contact.html
@@ -94,11 +94,10 @@
                                 <p>Info@BombayGroove.com</p>
                         </div>
                         <div class="phone">
-                        <a>
+                        <a href="+447803138891" style="text-decoration:none">
                             <i class="fa fa-phone fa-lg" style="color:rgba(255, 79, 79, 0.75)"></i>
                         </a>   
-                            <p>
-                        <a href="+447803138891" style="text-decoration:none">(+44) 0780 313 8891</a></p>
+                            <p>(+44) 0780 313 8891</p>
                 </div>
             </div>
         </div>   
