--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -106,7 +106,7 @@
     <img class="img-fluid" src="assets/images/mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
     </li>
     <li>
-    <img class="img-fluid" src="assets/images/quendon-hall-standing.JPG" alt="Bombay Groove standing outside a stately home">
+    <img class="img-fluid" src="assets/images/bg-with-ls.v1.jpg" alt="Bombay Groove standing outside a stately home">
     </li>
     <li>
     <img class="img-fluid" src="assets/images/quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
@@ -118,7 +118,7 @@
 
  <!------Footer------>
 
-      <footer class="container-fluid">
+      <footer class="container-fluid fixed">
         <div class="row justify-content-center">
           <div class="col-12">
             <ul class="list-inline social-links">
