--- a/Bombay Groove/repertoire.html
+++ b/Bombay Groove/repertoire.html
@@ -85,15 +85,15 @@
     <div class="row justify-content-center">
         <div class="col-12">
             <h1 class="contact-header text-uppercase text-center">Repertoire</h1>
-                <p class="contact-paragraph text-center">Here are some of our most popular songs.
-                 Please click the headers to download the full lists. If you you would like us to
+                <p class="contact-paragraph text-center">Please click the headers below to view and 
+                  download our playlists. If you you would like us to
                   perform a song that is not listed, please do get in touch with your request, as 
                   it is often possible for us to source the sheet music.</p>
             <div class="row justify-content-center">
                 <div class="quote col-12 col-lg-4 col-sm-6"> 
                     <a href="assets/bombay-groove-bollywood-playlist.pdf" target="_blank" style="text-decoration:none">
                     <h3 class="song-list-header text-uppercase">Bollywood Songs</h3></a>
-                    <ul class="list-group song-list" style="list-style-type:none">
+<!----                    <ul class="list-group song-list" style="list-style-type:none">
                         <li class="list-group-item">Tum Hi Ho</li>
                         <li class="list-group-item">Kal No Ha No</li>
                         <li class="list-group-item">Humko Humise</li>
@@ -104,8 +104,8 @@
                         <li class="list-group-item">Tujh Mein Rab Dikhta Hai</li>
                         <li class="list-group-item">Teri Ore</li>
                         <li class="list-group-item">Agar Tum Mil Jao</li>
-                    </ul>
-                </div>
+                    </ul> ---->
+                </div> 
                 <div class="quote col-12 col-lg-4 col-sm-6">
                     <a href="assets/bombay-groove-pop-rock-playlist.pdf" target="_blank" style="text-decoration:none">
                     <h3 class="song-list-header text-uppercase">Pop/Rock</h3></a>
@@ -114,9 +114,9 @@
                 <div class="quote col-12 col-lg-4 col-sm-6">
                 <a href="assets/bombay-groove-classical-playlist.pdf" target="_blank" style="text-decoration:none">
                 <h3 class="song-list-header text-uppercase">Classical</h3></a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+ <!---                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p> --->
                 </div>
             </div>    
         </div> 
@@ -125,7 +125,7 @@
 
  <!------Footer------>
 
-      <footer class="container-fluid">
+      <footer class="container-fluid fixed">
         <div class="row justify-content-center">
           <div class="col-12">
             <ul class="list-inline social-links">
