workng on responsive layout for mobile and tablet

--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -83,7 +83,7 @@
       <div class="gallery-container-fluid ">
         <div class="row">
           <div class="col-12">
-            <section class="callout jumbotron text-center">
+            <section class="callout jumbotron jumbotron-fluid text-center">
               <h1 class="jumbotron-header text-uppercase">Gallery</h1>
             </section>
           </div>
@@ -94,7 +94,7 @@
 <div class="image-container-fluid ">
     <ul class="photos">
     <li>
-    <img class="img-fluid d-md-none" src="assets/images/ark-royal-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
+    <img class="img-fluid d-lg-none" src="assets/images/ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
     </li>
     <li>
     <img class="img-fluid" src="assets/images/with-mirror.JPG" alt="Bombay Groove standing near a mirror">
