--- a/Bombay Groove/index.html
+++ b/Bombay Groove/index.html
@@ -92,8 +92,15 @@
         </div>
       </div>
       <!------./Callout----->
+<div>
+<a>      
+<img class="img-fluid d-lg-none tablet-and-mobile-image" src="assets/images/bombay-groove-colour2.JPG" alt="Bombay Groove performing on stage in sarees">      
+</a>
+<h1 class="tablet-and-mobile-header d-lg-none">Bombay Groove</h1>
+<h2 class="tablet-and-mobile-subheader d-lg-none">Bollywood String Quartet</h2>
+</div>      
 
-      <!------About Us-------->
+<!------About Us-------->
       <div class="about-us-container">
         <section class="about-us">
           <div class="row">
