--- a/Bombay Groove/repertoire.html
+++ b/Bombay Groove/repertoire.html
@@ -90,21 +90,9 @@
                   perform a song that is not listed, please do get in touch with your request, as 
                   it is often possible for us to source the sheet music.</p>
             <div class="row justify-content-center">
-                <div class="quote col-12 col-lg-4 col-sm-6"> 
+                <div class="quote col-12 col-lg-4 col-md-6"> 
                     <a href="assets/bombay-groove-bollywood-playlist.pdf" target="_blank" style="text-decoration:none">
                     <h3 class="song-list-header text-uppercase">Bollywood Songs</h3></a>
-<!----                    <ul class="list-group song-list" style="list-style-type:none">
-                        <li class="list-group-item">Tum Hi Ho</li>
-                        <li class="list-group-item">Kal No Ha No</li>
-                        <li class="list-group-item">Humko Humise</li>
-                        <li class="list-group-item">Tumhi Dekho Na</li>
-                        <li class="list-group-item">Chura Liya</li>
-                        <li class="list-group-item">Pehla Nasha</li>
-                        <li class="list-group-item">Tujhe Dekha To</li>
-                        <li class="list-group-item">Tujh Mein Rab Dikhta Hai</li>
-                        <li class="list-group-item">Teri Ore</li>
-                        <li class="list-group-item">Agar Tum Mil Jao</li>
-                    </ul> ---->
                 </div> 
                 <div class="quote col-12 col-lg-4 col-sm-6">
                     <a href="assets/bombay-groove-pop-rock-playlist.pdf" target="_blank" style="text-decoration:none">
@@ -113,10 +101,7 @@
                 </div>
                 <div class="quote col-12 col-lg-4 col-sm-6">
                 <a href="assets/bombay-groove-classical-playlist.pdf" target="_blank" style="text-decoration:none">
-                <h3 class="song-list-header text-uppercase">Classical</h3></a>
- <!---                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p> --->
+                <h3 class="song-list-header text-uppercase">Classical</h3></a>                
                 </div>
             </div>    
         </div> 
@@ -125,7 +110,7 @@
 
  <!------Footer------>
 
-      <footer class="container-fluid fixed">
+      <footer class="container-fluid">
         <div class="row justify-content-center">
           <div class="col-12">
             <ul class="list-inline social-links">
