fixing tablet and mobile layout

--- a/Bombay Groove/repertoire.html
+++ b/Bombay Groove/repertoire.html
@@ -81,27 +81,27 @@
 
 
 <article class="container-fluid overflow-hidden">
-<div class="contact-us-container-fluid">
+<div class="repertoire-container-fluid">
     <div class="row justify-content-center">
         <div class="col-12">
-            <h1 class="contact-header text-uppercase text-center">Repertoire</h1>
-                <p class="contact-paragraph text-center">Please click the headers below to view and 
+            <h1 class="repertoire-header text-uppercase text-center">Repertoire</h1>
+                <p class="repertoire-paragraph text-center">Please click the headers below to view and 
                   download our playlists. If you you would like us to
                   perform a song that is not listed, please do get in touch with your request, as 
                   it is often possible for us to source the sheet music.</p>
             <div class="row justify-content-center">
-                <div class="quote col-12 col-lg-4 col-md-6"> 
+                <div class="repertoire col-12 col-lg-4"> 
                     <a href="assets/bombay-groove-bollywood-playlist.pdf" target="_blank" style="text-decoration:none">
                     <h3 class="song-list-header text-uppercase">Bollywood Songs</h3></a>
                 </div> 
-                <div class="quote col-12 col-lg-4 col-sm-6">
+                <div class="repertoire col-12 col-lg-4">
                     <a href="assets/bombay-groove-pop-rock-playlist.pdf" target="_blank" style="text-decoration:none">
                     <h3 class="song-list-header text-uppercase">Pop/Rock</h3></a>
-                    <p class="song-list"> </p>
+                
                 </div>
-                <div class="quote col-12 col-lg-4 col-sm-6">
+                <div class="repertoire col-12 col-lg-4">
                 <a href="assets/bombay-groove-classical-playlist.pdf" target="_blank" style="text-decoration:none">
-                <h3 class="song-list-header text-uppercase">Classical</h3></a>                
+                <h3 class="song-list-header text-uppercase classical">Classical</h3></a>                
                 </div>
             </div>    
         </div> 
@@ -110,7 +110,7 @@
 
  <!------Footer------>
 
-      <footer class="container-fluid">
+      <footer class="container-fluid repertoire-footer">
         <div class="row justify-content-center">
           <div class="col-12">
             <ul class="list-inline social-links">
