--- a/Bombay Groove/contact.html
+++ b/Bombay Groove/contact.html
@@ -81,7 +81,7 @@
 <!-------Contact----->
 
 <article class="container-fluid overflow-hidden">
-<div class="contact-us-container-fluid">
+<div class="contact-us-container-fluid contact">
     <div class="row justify-content-center">
         <div class="col-12">
             <h1 class="contact-header text-uppercase text-center">Contact</h1>
@@ -97,7 +97,7 @@
                         <a href="+447803138891" style="text-decoration:none">
                             <i class="fa fa-phone fa-lg" style="color:rgba(255, 79, 79, 0.75)"></i>
                         </a>   
-                            <p>(+44) 0780 313 8891</p>
+                            <p class="phone-number">(+44) 0780 313 8891</p>
                 </div>
             </div>
         </div>   
