Html files validated by w3 validator

--- a/Bombay Groove/gallery.html
+++ b/Bombay Groove/gallery.html
@@ -24,7 +24,8 @@
   </head>
   
   <body>
-    <!-----Navbar------>
+
+    <!--Navbar-->
 
     <div class="navbar-container">
       <nav
@@ -78,17 +79,24 @@
       </nav>
     </div>
 
+<!--.Navbar-->
    
-<article class="container-fluid overflow-hidden">
+<!--Gallery Header-->
+
+<div class="container-fluid overflow-hidden">
       <div class="gallery-container-fluid ">
         <div class="row">
           <div class="col-12">
             <section class="callout jumbotron jumbotron-fluid text-center">
-              <h1 class="jumbotron-header text-uppercase">Gallery</h1>
+              <h2 class="jumbotron-header text-uppercase">Gallery</h2>
             </section>
           </div>
         </div>
       </div>
+
+<!--.Gallery Header-->
+
+<!--Images-->
 
 <div class="row justify-content-center image-selection">
 <div class="image-container-fluid ">
@@ -115,8 +123,9 @@
 </div>
 </div>
 
+<!--.Images-->
 
- <!------Footer------>
+ <!--Footer-->
 
       <footer class="container-fluid fixed">
         <div class="row justify-content-center">
@@ -156,9 +165,9 @@
           </div>
         </div>
       </footer>    
+</div> 
+      <!--./Footer-->
 
-      <!-----./Footer----->
-</article> 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
