--- a/Bombay Groove/index.html
+++ b/Bombay Groove/index.html
@@ -24,7 +24,8 @@
   </head>
   
   <body>
-    <!-----Navbar------>
+
+    <!--Navbar-->
 
     <div class="navbar-container">
       <nav
@@ -78,20 +79,22 @@
       </nav>
     </div>
 
-    <!-----Callout----->
+    <!--Callout-->
 
-    <article class="container-fluid overflow-hidden">
+    <div class="container-fluid overflow-hidden">
       <div class="callout-container-fluid">
         <div class="row">
           <div class="col-12">
             <section class="callout jumbotron text-center">
-              <h1 class="jumbotron-header text-uppercase">Bombay Groove</h1>
-              <h2 class="jumbotron-subheader">Bollywood String Quartet</h2>
+              <h2 class="jumbotron-header text-uppercase">Bombay Groove</h2>
+              <h3 class="jumbotron-subheader">Bollywood String Quartet</h3>
             </section>
           </div>
         </div>
       </div>
-      <!------./Callout----->
+
+<!--./Callout-->
+
 <div>
 <a>      
 <img class="img-fluid d-lg-none tablet-and-mobile-image" src="assets/images/bombay-groove-colour2.JPG" alt="Bombay Groove performing on stage in sarees">      
@@ -100,7 +103,8 @@
 <h2 class="tablet-and-mobile-subheader d-lg-none">Bollywood String Quartet</h2>
 </div>      
 
-<!------About Us-------->
+<!--About Us-->
+
       <div class="about-us-container">
         <section class="about-us">
           <div class="row">
@@ -143,9 +147,9 @@
           </div>
         </section>
       </div>
-      <!------./About Us-------->
+      <!--./About Us-->
 
-      <!-----Quotes----->
+      <!--Quotes-->
       <div class="quotes-container">
         <section class="quotes">
           <div class="row justify-content-center">
@@ -201,9 +205,9 @@
         </section>
       </div>
 
-      <!------./Quotes---->
+      <!--./Quotes-->
 
-      <!------Footer------>
+      <!--Footer-->
 
       <footer class="container-fluid">
         <div class="row justify-content-center">
@@ -244,9 +248,9 @@
         </div>
       </footer>    
 
-      <!-----./Footer----->
+      <!--./Footer-->
 
-    </article>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
