--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-	<!-----Navbar------>
+
+<!--Navbar-->
 
 	<div class="navbar-container">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top navbar-custom">
@@ -59,9 +60,11 @@
 			</div>
 		</nav>
 	</div>
-	<!--------------------Showreel----------------------->
+
+	<!--Showreel-->
+
 	<div class="container-fluid overflow-hidden">
-		<article class="watch-listen-container-fluid">
+		<div class="watch-listen-container-fluid">
 			<div class="container-fluid watch-listen-container">
 				<div class="row justify-content-md-center watch">
 					<div class="col-md-6">
@@ -71,22 +74,23 @@
 
 				<div class="row justify-content-md-center">
 					<div class="showreel-container col-md-6 watch">
-						<section class="showreel">
+						<div class="showreel">
 							<div class="embed-responsive embed-responsive-4by3">
 								<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tmgnp2eT9Mc"
 									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 									allowfullscreen></iframe>
 								<span class="sr-only">Bombay Groove Showreel</span>
 							</div>
-						</section>
+						<div>
 					</div>
 				</div>
 			</div>
-		</article>
+		</div>
+    </div>
+</div>
+<!--Audio-->
 
-		<!-----------Audio------------>
-
-		<article class="container-fluid audio-container-fluid overflow-hidden listen-section">
+		<div class="container-fluid audio-container-fluid overflow-hidden listen-section">
 			<div class="container-fluid watch-listen-container-fluid">
 				<div class="row justify-content-md-center listen">
 					<div class="col-md-6 listen">
@@ -97,9 +101,9 @@
 				<div class="container-fluid audio-players overflow-hidden">
 					<div class="row justify-content-center listen">
 						<div class="col-md-4 listen">
-							<ul style="list-style-type:none padding:0px">
+							<ul style="list-style-type:none; padding:0px">
 								<li>
-									<iframe width="100%" height="100" scrolling="no" frameborder="no"
+									<iframe width="400" height="100" style="border:0; overflow:hidden;"
 										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848818366&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									<div
 										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -112,7 +116,7 @@
 									</div>
 								</li>
 								<li>
-									<iframe width="100%" height="100" scrolling="no" frameborder="no"
+									<iframe width="400" height="100" style="border:0; overflow:hidden;"
 										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848613004&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									<div
 										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -124,7 +128,7 @@
 									</div>
 								</li>
 								<li>
-									<iframe width="100%" height="100" scrolling="no" frameborder="no"
+									<iframe width="400" height="100" style="border:0; overflow:hidden;"
 										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848608504&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									<div
 										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -137,7 +141,7 @@
 									</div>
 								</li>
 								<li>
-									<iframe width="100%" height="100" scrolling="no" frameborder="no"
+									<iframe width="400" height="100" style="border:0; overflow:hidden;"
 										src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848606644&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									<div
 										style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -148,14 +152,8 @@
 											title="Jar Of Hearts" target="_blank"
 											style="color: #cccccc; text-decoration: none;">Jar Of Hearts</a></div>
 								</li>
-							</ul>
-						</div>
-						<div class="container-fluid overflow-hidden">
-							<div class="row justify-content-center listen">
-								<div class="col-md-4 listen">
-									<ul style="list-style-type:none">
 										<li>
-											<iframe width="100%" height="100" scrolling="no" frameborder="no"
+											<iframe width="400" height="100" style="border:0; overflow:hidden;"
 												src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848594488&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 											<div
 												style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -168,7 +166,7 @@
 											</div>
 										</li>
 										<li>
-											<iframe width="100%" height="100" scrolling="no" frameborder="no"
+											<iframe width="400" height="100" style="border:0; overflow:hidden;"
 												src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848605237&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 											<div
 												style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -181,7 +179,7 @@
 											</div>
 										</li>
 										<li>
-											<iframe width="100%" height="100" scrolling="no" frameborder="no"
+											<iframe width="400" height="100" style="border:0; overflow:hidden"
 												src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848599888&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 											<div
 												style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -194,7 +192,7 @@
 											</div>
 										</li>
 										<li>
-											<iframe width="100%" height="100" scrolling="no" frameborder="no"
+											<iframe width="400" height="100" style="border:0; overflow:hidden;"
 												src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848591326&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 											<div
 												style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -206,17 +204,15 @@
 													style="color: #cccccc; text-decoration: none;">Agar Tum Mil Jao</a>
 											</div>
 										</li>
-									</ul>
+                                    </ul>    
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-		</article>
+		</div>
 
 
-		<!------Footer------>
+		<!--Footer-->
 
 		<footer class="container-fluid">
 			<div class="row justify-content-center listen">
@@ -251,7 +247,7 @@
 			</div>
 		</footer>
 	</div>
-	<!-----./Footer----->
+	<!--./Footer-->
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
