--- a/Bombay Groove/contact.html
+++ b/Bombay Groove/contact.html
@@ -24,7 +24,8 @@
   </head>
   
   <body>
-    <!-----Navbar------>
+
+    <!--Navbar-->
 
     <div class="navbar-container">
       <nav
@@ -77,8 +78,10 @@
         </div>
       </nav>
     </div>
+
+<!--.Navbar-->
     
-<!-------Contact----->
+<!--Contact-->
 
 <article class="container-fluid overflow-hidden">
 <div class="contact-us-container-fluid contact">
@@ -104,7 +107,9 @@
     </div>        
 </div>
 
- <!------Footer------>
+<!--.Contact-->
+
+ <!--Footer-->
 
       <footer class="container-fluid">
         <div class="row justify-content-center">
@@ -145,7 +150,8 @@
         </div>
       </footer>    
 </article>
-      <!-----./Footer----->
+
+      <!--./Footer-->
 
   
     <script
