--- a/Bombay Groove/repertoire.html
+++ b/Bombay Groove/repertoire.html
@@ -24,7 +24,8 @@
   </head>
   
   <body>
-    <!-----Navbar------>
+
+    <!--Navbar-->
 
     <div class="navbar-container">
       <nav
@@ -77,7 +78,8 @@
         </div>
       </nav>
     </div>
-<!-------Content----->
+
+<!--Content-->
 
 
 <article class="container-fluid overflow-hidden">
@@ -108,7 +110,7 @@
     </div>        
 </div>
 
- <!------Footer------>
+ <!--Footer-->
 
       <footer class="container-fluid repertoire-footer">
         <div class="row justify-content-center">
@@ -149,7 +151,8 @@
         </div>
       </footer>    
 </article>
-      <!-----./Footer----->
+
+      <!--./Footer-->
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
