all files moved to root for deployment

--- a/repertoire.html
+++ b/repertoire.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/style.css" type="text/css" />
   </head>
   
   <body>
@@ -93,16 +93,16 @@
                   it is often possible for us to source the sheet music.</p>
             <div class="row justify-content-center">
                 <div class="repertoire col-12 col-lg-4"> 
-                    <a href="assets/bombay-groove-bollywood-playlist.pdf" target="_blank" style="text-decoration:none">
+                    <a href="/bombay-groove-bollywood-playlist.pdf" target="_blank" style="text-decoration:none">
                     <h3 class="song-list-header text-uppercase">Bollywood Songs</h3></a>
                 </div> 
                 <div class="repertoire col-12 col-lg-4">
-                    <a href="assets/bombay-groove-pop-rock-playlist.pdf" target="_blank" style="text-decoration:none">
+                    <a href="/bombay-groove-pop-rock-playlist.pdf" target="_blank" style="text-decoration:none">
                     <h3 class="song-list-header text-uppercase">Pop/Rock</h3></a>
                 
                 </div>
                 <div class="repertoire col-12 col-lg-4">
-                <a href="assets/bombay-groove-classical-playlist.pdf" target="_blank" style="text-decoration:none">
+                <a href="/bombay-groove-classical-playlist.pdf" target="_blank" style="text-decoration:none">
                 <h3 class="song-list-header text-uppercase classical">Classical</h3></a>                
                 </div>
             </div>    
