--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/style.css" type="text/css" />
   </head>
   
   <body>
@@ -102,22 +102,22 @@
 <div class="image-container-fluid ">
     <ul class="photos">
     <li>
-    <img class="img-fluid d-lg-none" src="assets/images/ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
+    <img class="img-fluid d-lg-none" src="/ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
     </li>
     <li>
-    <img class="img-fluid" src="assets/images/with-mirror.JPG" alt="Bombay Groove standing near a mirror">
+    <img class="img-fluid" src="/with-mirror.JPG" alt="Bombay Groove standing near a mirror">
     </li>
     <li>
-    <img class="img-fluid" src="assets/images/stockbrook-(2).jpg" alt="Bombay Groove standing near a mirror">
+    <img class="img-fluid" src="/stockbrook.jpg" alt="Bombay Groove standing near a mirror">
     </li>
     <li>
-    <img class="img-fluid" src="assets/images/mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
+    <img class="img-fluid" src="/mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
     </li>
     <li>
-    <img class="img-fluid" src="assets/images/bg-with-ls.v1.jpg" alt="Bombay Groove standing outside a stately home">
+    <img class="img-fluid" src="/bg-with-ls.jpg" alt="Bombay Groove standing outside a stately home">
     </li>
     <li>
-    <img class="img-fluid" src="assets/images/quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
+    <img class="img-fluid" src="/quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
     </li>
     </ul>
 </div>
