typo in repertoire fixed. Code for phone number changed

--- a/repertoire.html
+++ b/repertoire.html
@@ -88,7 +88,7 @@
         <div class="col-12">
             <h1 class="repertoire-header text-uppercase text-center">Repertoire</h1>
                 <p class="repertoire-paragraph text-center">Please click the headers below to view and 
-                  download our playlists. If you you would like us to
+                  download our playlists. If you would like us to
                   perform a song that is not listed, please do get in touch with your request, as 
                   it is often possible for us to source the sheet music.</p>
             <div class="row justify-content-center">
