--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                                 <p>Info@BombayGroove.com</p>
                         </div>
                         <div class="phone">
-                        <a href="+447803138891" style="text-decoration:none">
+                        <a href="tel:+447803138891" style="text-decoration:none">
                             <i class="fa fa-phone fa-lg" style="color:rgba(255, 79, 79, 0.75)"></i>
                         </a>   
                             <p class="phone-number">(+44) 0780 313 8891</p>
