--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <div>
 <a>      
-<img class="img-fluid d-lg-none tablet-and-mobile-image" src="assets/images/bombay-groove-colour2.JPG" alt="Bombay Groove performing on stage in sarees">      
+<img class="img-fluid d-lg-none tablet-and-mobile-image" src="bombay-groove-colour2.JPG" alt="Bombay Groove performing on stage in sarees">      
 </a>
 <h1 class="tablet-and-mobile-header d-lg-none">Bombay Groove</h1>
 <h2 class="tablet-and-mobile-subheader d-lg-none">Bollywood String Quartet</h2>
