--- a/gallery.html
+++ b/gallery.html
@@ -102,7 +102,7 @@
 <div class="image-container-fluid ">
     <ul class="photos">
     <li>
-    <img class="img-fluid d-lg-none" src="ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
+    <img class="img-fluid d-lg-none tablet-and-mobile-image" src="ark-royal-large-cropped.jpg" alt="Bombay Groove performing on stage in sarees">
     </li>
     <li>
     <img class="img-fluid" src="with-mirror.JPG" alt="Bombay Groove standing near a mirror">
