padding on mobile devices changed on repertoire page. Text decoration removed on contact page

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
 
             <div class="col-12 col-lg-4 col-sm-6">
-              <h3 class="about-us-header text-uppercase">What We Do</h3>
+              <h3 class="about-us-header text-uppercase about-us-mobile">What We Do</h3>
               <p>
                 We provide beautiful music for your event. As wedding
                 specialists, we are available to play for all parts of the
@@ -134,7 +134,7 @@
             </div>
 
             <div class="col-12 col-lg-4 col-sm-6">
-              <h3 class="about-us-header text-uppercase">Prices</h3>
+              <h3 class="about-us-header text-uppercase about-us-mobile">Prices</h3>
               <p>
                 Our prices are dependent on the location of your event, and how
                 long you would like us to play for. However, currently we charge
