--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                         <a href="tel:+447803138891" style="text-decoration:none">
                             <i class="fa fa-phone fa-lg" style="color:rgba(255, 79, 79, 0.75)"></i>
                         </a>   
-                            <p class="phone-number">(+44) 0780 313 8891</p>
+                            <p class="phone-number" style="text-decoration:none">(+44) 0780 313 8891</p>
                 </div>
             </div>
         </div>   
