gallery with larger photo

--- a/gallery.html
+++ b/gallery.html
@@ -114,7 +114,7 @@
     <img class="img-fluid" src="mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
     </li>
     <li>
-    <img class="img-fluid" src="bg-with-ls.jpg" alt="Bombay Groove standing outside a stately home">
+    <img class="img-fluid" src="bg-with-ls.v1.jpg" alt="Bombay Groove on stage, from behind in white dresses">
     </li>
     <li>
     <img class="img-fluid" src="quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
