picture size adjusted for xl screens

--- a/gallery.html
+++ b/gallery.html
@@ -108,7 +108,7 @@
     <img class="img-fluid" src="with-mirror.JPG" alt="Bombay Groove standing near a mirror">
     </li>
     <li>
-    <img class="img-fluid" src="stockbrook.jpg" alt="Bombay Groove standing near a mirror">
+    <img class="img-fluid" src="stockbrook.jpg" alt="Bombay Groove performing at a wedding in black dresses">
     </li>
     <li>
     <img class="img-fluid" src="mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
