saved large gallery images

--- a/gallery.html
+++ b/gallery.html
@@ -108,13 +108,13 @@
     <img class="img-fluid" src="with-mirror.JPG" alt="Bombay Groove standing near a mirror">
     </li>
     <li>
-    <img class="img-fluid" src="stockbrook.jpg" alt="Bombay Groove performing at a wedding in black dresses">
+    <img class="img-fluid" src="stockbrook.v1.jpg" alt="Bombay Groove performing at a wedding in black dresses">
     </li>
     <li>
     <img class="img-fluid" src="mirror-reflection.JPG" alt="Bombay Groove reflected in a mirror">
     </li>
     <li>
-    <img class="img-fluid" src="bg-with-ls.jpg" alt="Bombay Groove on stage, from behind in white dresses">
+    <img class="img-fluid" src="bg-with-ls.v1.jpg" alt="Bombay Groove on stage, from behind in white dresses">
     </li>
     <li>
     <img class="img-fluid" src="quendon-hall.JPG" alt="Bombay Groove seated by a fountain">
